updated gradle to build complete windows package